# server/http-sig.js
@@ -53,9 +53,6 @@ const verifyHTTPSig = async (ctx, publicKey) => {
         debug(`Invalid message signature public key: ${error}`);
         return { valid: false, status: 'invalid message signature public key' };
     }
-    debug(`Public Key ASN.1 Base64: ${publicKey}`);
-    debug(`Public Key PEM: ${publicKeyPEM}`);
-    
     // Check the digest header if it exists (pass the node request object (ctx.req), *not* the Koa request object (ctx.request))
     if (ctx.req.headers['content-digest'] || ctx.req.headers['digest']) {
         const requestBody = ctx.request.rawBody || '';
@@ -77,10 +74,8 @@ const verifyHTTPSig = async (ctx, publicKey) => {
         if (parsedSignature.version !== 'rfc9421') {
             return { valid: false, status: 'unsupported message signature format' };
         }
-        debug(`Parsed Signature: ${JSON.stringify(parsedSignature, null, 2)}`);
     } catch (error) {
-        debug(`Malformed message signature: ${error}`);
-        debug(`Request Headers: ${JSON.stringify(ctx.req.headers, null, 2)}`);
+      debug(`Malformed message signature: ${error}`);
         return { valid: false, status: 'malformed message signature' };
     }
 
@@ -88,15 +83,12 @@ const verifyHTTPSig = async (ctx, publicKey) => {
     try {
         const signatureVerified = await verifyParsedSignature(parsedSignature, publicKeyPEM, (...args) => debug(args));
         if (!signatureVerified) {
-            debug(`Request Headers: ${JSON.stringify(ctx.req.headers, null, 2)}`);
             return { valid: false, status: 'invalid message signature' };
         }
     } catch (error) {
         debug(`Message signature error: ${error}`);
-        debug(`Request Headers: ${JSON.stringify(ctx.req.headers, null, 2)}`);
         return { valid: false, status: 'message signature error' };
     }
-    debug(`Request Headers: ${JSON.stringify(ctx.req.headers, null, 2)}`);
     return { valid: true, status: 'valid HTTP message signature' };
 }
 
